[gd_scene load_steps=25 format=1]

[ext_resource path="res://script/perlengkapan.gd" type="Script" id=1]
[ext_resource path="res://images/perlengkapan/perlengkapan-backgroung.png" type="Texture" id=2]
[ext_resource path="res://font/BebasNeue-36.fnt" type="BitmapFont" id=3]
[ext_resource path="res://images/logo_4.png" type="Texture" id=4]
[ext_resource path="res://images/perlengkapan/ok11/perlengkapan-lengkap_09.png" type="Texture" id=5]
[ext_resource path="res://images/perlengkapan/ok11/perlengkapan-tidaklengkap_10.png" type="Texture" id=6]
[ext_resource path="res://images/perlengkapan/ok11/perlengkapan-item1_05.png" type="Texture" id=7]
[ext_resource path="res://images/perlengkapan/ok11/perlengkapan-item1_07.png" type="Texture" id=8]
[ext_resource path="res://images/perlengkapan/ok11/perlengkapan-item1_15.png" type="Texture" id=9]
[ext_resource path="res://images/perlengkapan/ok11/perlengkapan-item1_18.png" type="Texture" id=10]
[ext_resource path="res://images/perlengkapan/ok11/perlengkapan-item1_11.png" type="Texture" id=11]
[ext_resource path="res://images/perlengkapan/AAAAAAAAAA_02.png" type="Texture" id=12]
[ext_resource path="res://images/perlengkapan/opsi-perlengkapan_03.png" type="Texture" id=13]
[ext_resource path="res://images/perlengkapan/opsi-perlengkapan_05.png" type="Texture" id=14]
[ext_resource path="res://images/perlengkapan/opsi-perlengkapan_07.png" type="Texture" id=15]
[ext_resource path="res://images/perlengkapan/opsi-perlengkapan_09.png" type="Texture" id=16]
[ext_resource path="res://images/perlengkapan/opsi-perlengkapan_10.png" type="Texture" id=17]
[ext_resource path="res://images/info_14.png" type="Texture" id=18]
[ext_resource path="res://images/Bahan-21_12.png" type="Texture" id=19]
[ext_resource path="res://images/1layout-popup.png" type="Texture" id=20]
[ext_resource path="res://images/layout-popup_06.png" type="Texture" id=21]
[ext_resource path="res://images/layout-popup_07.png" type="Texture" id=22]

[sub_resource type="Animation" id=1]

resource/name = "anim_judul"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Container/judul:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0.5, 1.5 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( -600, 53 ), Vector2( -10, 53 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "anim_text"
length = 20.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/helm:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 19.9 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -3, 8 ), Vector2( -6200, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel/jaket:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 20 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -6200, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel/sarung:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 20 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -8400, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel/celana:rect/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 19.9 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -6200, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Panel/sepatu:rect/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 20 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -6200, 0 ) ]
}

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="back" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 800.0
margin/bottom = 1280.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="Panel" type="Panel" parent="."]

editor/display_folded = true
visibility/self_opacity = 0.0
visibility/blend_mode = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 1157.0
margin/right = 804.0
margin/bottom = 1265.0

[node name="helm" type="Label" parent="Panel"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -6200.0
margin/top = 0.0
margin/right = -2819.0
margin/bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "                                                                                                                    Bermanfaat untuk melindungi anda dari angin, cuaca, dan benturan saat terjadi sesuatu yang tidak diinginkan. Gunakan helm yang sesuai dan berlabel SNI."
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="jaket" type="Label" parent="Panel"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -6200.0
margin/top = 0.0
margin/right = -2263.0
margin/bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "                                                                                                                       Jaket dapat melindungi tubuh dari angin dan membuat tubuh tetap hangat saat berkendara. Pilih bahan jaket yang tepat dan sesuai kebutuhan, tapi sebaiknya pilih jaket yang tahan angin."
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sarung" type="Label" parent="Panel"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -8400.0
margin/top = 0.0
margin/right = -4569.0
margin/bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "                                                                                                                         Sarung tangan dapat membuat tangan tetap kering dan tidak licin saat pegang gas, selain itu sarung tangan juga bisa melindungi tangan dan terhindar dari kulit tangan yang belang."
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="celana" type="Label" parent="Panel"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -6200.0
margin/top = 0.0
margin/right = -2559.0
margin/bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "                                                                                                                    Celana dapat melindungi dari gesekan yang mungkin terjadi saat di jalan raya, dan juga mumbuatmu tetap hangat dan mengurangi resiko apabila terjadi sesuatu di jalan raya."
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sepatu" type="Label" parent="Panel"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -6200.0
margin/top = 0.0
margin/right = -461.0
margin/bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "                                                                                       			                             															Sepatu dapat melindungi kaki dari benturan atau gesekan yang mungkin terjadi saat kamu di jalan raya, selain itu sepatu juga dapat membuat anda lebih nyaman saat berkendara"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 650.0
margin/top = 18.0
margin/right = 787.0
margin/bottom = 187.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="Container" type="Container" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="lengkap" type="TextureFrame" parent="Container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 483.0
margin/top = 303.0
margin/right = 789.0
margin/bottom = 997.0
texture = ExtResource( 5 )
stretch_mode = 0

[node name="tidak" type="TextureFrame" parent="Container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 483.0
margin/top = 320.0
margin/right = 789.0
margin/bottom = 1014.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="helm" type="TextureFrame" parent="Container/tidak"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = -17.0
margin/right = 145.0
margin/bottom = 101.0
texture = ExtResource( 7 )
stretch_mode = 0

[node name="jaket" type="TextureFrame" parent="Container/tidak"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -6.0
margin/top = 70.0
margin/right = 247.0
margin/bottom = 329.0
texture = ExtResource( 8 )
stretch_mode = 0

[node name="celana" type="TextureFrame" parent="Container/tidak"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 25.0
margin/top = 274.0
margin/right = 207.0
margin/bottom = 565.0
texture = ExtResource( 9 )
stretch_mode = 0

[node name="sepatu" type="TextureFrame" parent="Container/tidak"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -15.0
margin/top = 502.0
margin/right = 206.0
margin/bottom = 668.0
texture = ExtResource( 10 )
stretch_mode = 0

[node name="sarung" type="TextureFrame" parent="Container/tidak"]

visibility/visible = false
rect/rotation = -1.00631
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 86.0
margin/top = 206.0
margin/right = 307.0
margin/bottom = 372.0
texture = ExtResource( 11 )
stretch_mode = 0

[node name="judul" type="TextureFrame" parent="Container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -25.104
margin/top = 53.0
margin/right = 619.896
margin/bottom = 1195.0
texture = ExtResource( 12 )
stretch_mode = 0

[node name="helm" type="TextureButton" parent="Container/judul"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = 61.0
margin/right = 549.0
margin/bottom = 263.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 13 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="jaket" type="TextureButton" parent="Container/judul"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = 262.0
margin/right = 546.0
margin/bottom = 471.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 14 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="sarung" type="TextureButton" parent="Container/judul"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = 483.0
margin/right = 617.0
margin/bottom = 659.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 15 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="celana" type="TextureButton" parent="Container/judul"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 659.0
margin/right = 618.0
margin/bottom = 892.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 16 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="sepatu" type="TextureButton" parent="Container/judul"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 19.0
margin/top = 888.0
margin/right = 622.0
margin/bottom = 1104.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 17 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/anim_judul = SubResource( 1 )
anims/anim_text = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="back_button" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 610.0
margin/top = 980.0
margin/right = 768.0
margin/bottom = 1140.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 18 )
textures/pressed = ExtResource( 19 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="closer" type="TextureFrame" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 179.0
margin/right = 758.0
margin/bottom = 787.0
texture = ExtResource( 20 )
stretch_mode = 0

[node name="Panel" type="Panel" parent="closer"]

visibility/opacity = 0.2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -93.0
margin/top = -236.0
margin/right = 858.0
margin/bottom = 1215.0

[node name="yes" type="TextureButton" parent="closer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 46.0
margin/top = 332.0
margin/right = 379.0
margin/bottom = 545.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 21 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="no" type="TextureButton" parent="closer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 387.0
margin/top = 332.0
margin/right = 671.0
margin/bottom = 545.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 22 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="pressed" from="Container/judul/helm" to="." method="_on_helm_pressed"]

[connection signal="toggled" from="Container/judul/helm" to="." method="_on_helm_toggled"]

[connection signal="pressed" from="Container/judul/jaket" to="." method="_on_jaket_pressed"]

[connection signal="toggled" from="Container/judul/jaket" to="." method="_on_jaket_toggled"]

[connection signal="pressed" from="Container/judul/sarung" to="." method="_on_sarung_pressed"]

[connection signal="toggled" from="Container/judul/sarung" to="." method="_on_sarung_toggled"]

[connection signal="pressed" from="Container/judul/celana" to="." method="_on_celana_pressed"]

[connection signal="toggled" from="Container/judul/celana" to="." method="_on_celana_toggled"]

[connection signal="pressed" from="Container/judul/sepatu" to="." method="_on_sepatu_pressed"]

[connection signal="toggled" from="Container/judul/sepatu" to="." method="_on_sepatu_toggled"]

[connection signal="finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]

[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]

[connection signal="pressed" from="closer/yes" to="." method="_on_yes_pressed"]

[connection signal="pressed" from="closer/no" to="." method="_on_no_pressed"]


